# edu-practice

./: .gitignore  .travis.yml  CMakeLists.txt
src/main/: lists.h  main.c  utils.h
src/test/: main.c
